fixed text from getting cut off in work section

--- a/partials/_work.scss
+++ b/partials/_work.scss
@@ -135,6 +135,9 @@
             padding: 0;
             text-align: center;
             align-items: center;
+            p {
+                padding: 0 10px;
+            }
         }
     }
 }
