--- a/styles/style.css
+++ b/styles/style.css
@@ -650,7 +650,9 @@ h4.skillsTitle {
     text-align: center;
     -webkit-box-align: center;
     -ms-flex-align: center;
-    align-items: center; } }
+    align-items: center; }
+    .project .description p {
+      padding: 0 10px; } }
 
 @media screen and (max-width: 500px) {
   .project .deviceImage img {
